// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hides password, and changes button when pending  1`] = `
<KeyboardFriendlyView>
  <ScrollView
    keyboardDismissMode="on-drag"
    keyboardShouldPersistTaps="handled"
  >
    <View>
      <Text>
        Hi there stranger!
      </Text>
      <Text>
        To kick things off, tell us a bit more about yourself and get your account off the ground.
      </Text>
    </View>
    <View>
      <SettingControl
        error={null}
        label="Your Full Name"
        onChange={[Function]}
        onSubmitEditing={[Function]}
        returnKeyType="next"
        value="Ra"
      />
      <SettingControl
        autoCapitalize="none"
        autoCorrect={false}
        error={null}
        keyboardType="email-address"
        label="Email Address"
        onChange={[Function]}
        onSubmitEditing={[Function]}
        returnKeyType="next"
        value="ra@ra.com"
      />
    </View>
  </ScrollView>
  <View>
    <Button
      disabled={true}
      onPress={[Function]}
      text="Saving..."
    />
  </View>
</KeyboardFriendlyView>
`;

exports[`loads user settings and updates errors on update when appropriate 1`] = `
Object {
  "email": null,
  "name": null,
  "password": null,
}
`;

exports[`loads user settings and updates errors on update when appropriate 2`] = `
Object {
  "email": "one error",
  "name": null,
  "password": null,
}
`;

exports[`matches last snapshot 1`] = `
<KeyboardFriendlyView>
  <ScrollView
    keyboardDismissMode="on-drag"
    keyboardShouldPersistTaps="handled"
  >
    <View>
      <Text>
        Hi there stranger!
      </Text>
      <Text>
        To kick things off, tell us a bit more about yourself and get your account off the ground.
      </Text>
    </View>
    <View>
      <SettingControl
        error={null}
        label="Your Full Name"
        onChange={[Function]}
        onSubmitEditing={[Function]}
        returnKeyType="next"
        value="Ra"
      />
      <SettingControl
        autoCapitalize="none"
        autoCorrect={false}
        error={null}
        keyboardType="email-address"
        label="Email Address"
        onChange={[Function]}
        onSubmitEditing={[Function]}
        returnKeyType="next"
        value="ra@ra.com"
      />
      <SettingControl
        error={null}
        label="Password"
        onChange={[Function]}
        onSubmitEditing={[Function]}
        returnKeyType="next"
        toggleSecureTextEntry={true}
        value="rarara"
      />
      <SettingControl
        label="Confirm Password"
        onChange={[Function]}
        onSubmitEditing={[Function]}
        returnKeyType="go"
        toggleSecureTextEntry={true}
      />
    </View>
  </ScrollView>
  <View>
    <Button
      disabled={false}
      onPress={[Function]}
      text="Continue"
    />
  </View>
</KeyboardFriendlyView>
`;

exports[`validates its fields 1`] = `
Object {
  "errors": Object {
    "confirmPassword": "Passwords must match",
    "email": "Must be a valid email",
    "name": "Name must not consist solely of whitespace.",
    "password": "Password must be at least 9 characters.",
  },
}
`;
